--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -375,11 +375,12 @@ button.menutoggle {
   animation: fadeIn 0.3s ease-in-out;
   justify-content: space-around;
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   z-index: 2;
 }
 
 .hamburger-navigation.open li {
-  margin: 10px;
+  /* margin: 10px; */
   font-weight: 500;
 }
 
@@ -577,6 +578,9 @@ section.one.error h1 {
 
 /* PROJECTs & BLOG*/
 
+.no-scrolling {
+  overflow: hidden;
+}
 .nav-item.projects {
   line-height: 1;
 }
@@ -602,12 +606,12 @@ li.nav-item.two.projects {
   /* margin-top: 130px; */
 }
 
-.main-content.projects {
+/* .main-content.projects {
   margin-top: 180px;
 }
 .main-content.blog {
   margin-top: 180px;
-}
+} */
 
 .navigation {
   padding-left: 20px;
@@ -675,10 +679,11 @@ li.nav-item.two.projects {
 }
 
 .two.about img {
-  /* width: 100%; */
+  width: 100vw;
   position: relative;
   top: 10px;
-  /* border-radius: 60%; */
+  border-radius: 60%;
+  height: 100%;
 }
 
 /* .main-content.about h2, h3, .main-content.contact h2, h3  {
@@ -1232,6 +1237,15 @@ textarea {
 
 /* media query for mobile in landscape mode */
 @media only screen and (max-height: 420px) and (orientation: landscape) {
+  /* #home,
+  .no-scrolling {
+    overflow: auto;
+  } */
+
+  .logo {
+    height: 15vh;
+  }
+
   .nav-item {
     font-size: 3rem;
     line-height: 5rem;
