Fixing overscrolling on three pages

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -461,7 +461,9 @@ section.one.error h1 {
 /* .no-scrolling {
   overflow: hidden;
 } */
-
+.no-overflow {
+  overflow-x: hidden;
+}
 .nav-item.projects {
   line-height: 1;
 }
